--- a/g3dSubmarin/g3dSubmarin/g3dSubmarin.vcxproj
+++ b/g3dSubmarin/g3dSubmarin/g3dSubmarin.vcxproj
@@ -70,6 +70,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>..\..\..\_external\GLEW\include;..\..\..\_external\glm;..\..\..\_external\GLFW\include;..\..\..\_external\STB;..\..\..\_external\freeglut\include;..\..\..\_external\packages\Assimp.3.0.0\build\native\include\;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\_external\GLEW\lib\Release\x64;..\..\..\_external\GLFW\lib-vc2022;..\..\..\_external\freeglut\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
