--- a/g3dSubmarin/g3dSubmarin/g3dSubmarin.vcxproj.filters
+++ b/g3dSubmarin/g3dSubmarin/g3dSubmarin.vcxproj.filters
@@ -18,5 +18,36 @@
     <ClCompile Include="g3dSubmarin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="model.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="includes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="basicShader.fs">
+      <Filter>Header Files</Filter>
+    </None>
+    <None Include="basicShader.vs">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
