Add shader to display textures, begin work on world class, to have dynamic chunks as the camera explores

--- a/g3dSubmarin/g3dSubmarin/CMakeLists.txt
+++ b/g3dSubmarin/g3dSubmarin/CMakeLists.txt
@@ -16,7 +16,9 @@ add_executable(g3dSubmarin g3dSubmarin.cpp
         vertex.h
         stb_image.h
         camera.cpp
-        camera.h)
+        camera.h
+        worldChunks.cpp
+        worldChunks.h)
 
 
 find_package(GLUT REQUIRED)
