Modified included files

--- a/g3dSubmarin/g3dSubmarin/g3dSubmarin.vcxproj.filters
+++ b/g3dSubmarin/g3dSubmarin/g3dSubmarin.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClCompile Include="shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="worldChunks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes.h">
@@ -41,12 +50,30 @@
     <ClInclude Include="shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vertex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="worldChunks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="basicShader.fs">
       <Filter>Header Files</Filter>
     </None>
     <None Include="basicShader.vs">
+      <Filter>Header Files</Filter>
+    </None>
+    <None Include="basicTextureShader.vs">
+      <Filter>Header Files</Filter>
+    </None>
+    <None Include="basicTextureShader.fs">
       <Filter>Header Files</Filter>
     </None>
   </ItemGroup>
